Setup the base url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,29 +4,29 @@
       <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
       <h1 class="mdl-mega-footer--heading">Project</h1>
       <ul class="mdl-mega-footer--link-list">
-        <li><a href="/about">About</a></li>
-        <li><a href="/license">License</a></li>
-        <li><a href="/partners">Partners</a></li>
-        <li><a href="/versions">Versions</a></li>
-        <li><a href="/documentation/contribution-guide">Contribute</a></li>
+        <li><a href="{{ site.baseurl }}about">About</a></li>
+        <li><a href="{{ site.baseurl }}license">License</a></li>
+        <li><a href="{{ site.baseurl }}partners">Partners</a></li>
+        <li><a href="{{ site.baseurl }}versions">Versions</a></li>
+        <li><a href="{{ site.baseurl }}documentation/contribution-guide">Contribute</a></li>
       </ul>
     </div>
     <div class="mdl-mega-footer--drop-down-section">
       <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
       <h1 class="mdl-mega-footer--heading">Details</h1>
       <ul class="mdl-mega-footer--link-list">
-        <li><a href="/stakeholders">Stakeholders</a></li>
-        <li><a href="/userstories">User Stories</a></li>
-        <li><a href="/specifications">Specifications</a></li>
-        <li><a href="/resources">Resources</a></li>
-        <li><a href="/documentation">Documentation</a></li>
+        <li><a href="{{ site.baseurl }}stakeholders">Stakeholders</a></li>
+        <li><a href="{{ site.baseurl }}userstories">User Stories</a></li>
+        <li><a href="{{ site.baseurl }}specifications">Specifications</a></li>
+        <li><a href="{{ site.baseurl }}resources">Resources</a></li>
+        <li><a href="{{ site.baseurl }}documentation">Documentation</a></li>
       </ul>
     </div>
     <div class="mdl-mega-footer--drop-down-section">
       <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
       <h1 class="mdl-mega-footer--heading">Technology</h1>
       <ul class="mdl-mega-footer--link-list">
-        <li><a href="/documentation/developer-guide">How it works</a></li>
+        <li><a href="{{ site.baseurl }}documentation/developer-guide">How it works</a></li>
         <li><a href="https://www.eclipse.org/acceleo">Acceleo</a></li>
         <li><a href="https://www.eclipse.org/sirius">Sirius</a></li>
       </ul>
@@ -35,7 +35,7 @@
       <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
       <h1 class="mdl-mega-footer--heading">Support</h1>
       <ul class="mdl-mega-footer--link-list">
-        <li><a href="/faq">FAQ</a></li>
+        <li><a href="{{ site.baseurl }}faq">FAQ</a></li>
         <li><a href="https://www.eclipse.org/forums/index.php/f/19/">Forum</a></li>
         <li><a href="https://wiki.eclipse.org/EEF">Wiki</a></li>
         <li><a href="http://www.obeo.fr/en/services/training">Training</a></li>
@@ -46,10 +46,10 @@
     <div class="mdl-logo">
     </div>
     <ul class="mdl-mega-footer--link-list">
-      <li><a href="/about">About</a></li>
+      <li><a href="{{ site.baseurl }}about">About</a></li>
       <li><a href="https://www.obeo.fr">Obeo</a></li>
       <li><a href="https://www.eclipse.org">Eclipse Foundation</a></li>
-      <li><a href="/license">License and Terms</a></li>
+      <li><a href="{{ site.baseurl }}license">License and Terms</a></li>
     </ul>
   </div>
 </footer>
