--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,15 +10,15 @@
   <div class="mdl-layout--large-screen-only mdl-layout__header-row">
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/">Home</a>
-        <a class="mdl-navigation__link" href="/features">Features</a>
-        <a class="mdl-navigation__link" href="/documentation">Documentation</a>
-        <a class="mdl-navigation__link" href="/versions">Versions</a>
-        <a class="mdl-navigation__link" href="/stakeholders">Stakeholders</a>
-        <a class="mdl-navigation__link" href="/userstories">Users Stories</a>
-        <a class="mdl-navigation__link" href="/specifications">Specifications</a>
-        <a class="mdl-navigation__link" href="/meetingminutes">Meeting Minutes</a>
-        <a class="mdl-navigation__link" href="/checklists">Checklists</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}">Home</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}features">Features</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}documentation">Documentation</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}versions">Versions</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}stakeholders">Stakeholders</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}userstories">Users Stories</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}specifications">Specifications</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}meetingminutes">Meeting Minutes</a>
+        <a class="mdl-navigation__link" href="{{ site.baseurl }}checklists">Checklists</a>
       </nav>
     </div>
 </header>
