--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
-  <link rel="stylesheet" href="/stylesheets/stylesheet.css">
-  <link rel="stylesheet" href="/stylesheets/pygments.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/stylesheet.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygments.css">
 </head>
