Fix a broken link

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@
       {% include footer.html %}
     </main>
 
-    <a href="/documentation/contribution-guide" id="how-to-contribute" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contribute!</a>
+    <a href="{{ site.baseurl }}documentation/contribution-guide" id="how-to-contribute" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contribute!</a>
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
   </div>
 </body>
